<resources>
    <string name="app_name">Android002</string>
    <string name="popular_movies_title_text">Popular Movies/Tv:</string>
    <string name="popular_tv_title_text">TV</string>
    <string name="bottom_menu_home_title_text">Home</string>
    <string name="bottom_menu_search_title_text">Search</string>
    <string name="bottom_menu_profile_title_text">Profile</string>
    <string name="image_placeholder_text">No+image+available</string>
    <string name="search_view_hint">Search by name</string>
    <string name="search_movie_title">Movies</string>
    <string name="search_tv_title">TV</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="logout_button_text">Log out</string>
    <string name="field_id_text">ID:</string>
    <string name="field_name_text">Name:</string>
    <string name="field_username_text">Username:</string>
    <string name="genres_title_text">Genres:</string>
    <string name="cast_title_text">Cast:</string>
    <string name="movie_runtime_postfix">min.</string>
    <string name="tv_number_of_episode_prefix">Series:</string>
    <string name="favorite_movies_list_text">Favorite Movies:</string>
    <string name="favorite_tv_list_text">Favorite TV:</string>
    <string name="no_internet_connection_message">No internet connection</string>
</resources>