<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:shapeAppearanceOverlay="@style/circleImageView"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivAvatar"
            android:layout_marginTop="16dp"
            android:text="@string/field_id_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivAvatar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/tvIdLabel"
            android:textSize="16sp"
            tools:text="id_number" />

        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvIdLabel"
            android:layout_marginTop="16dp"
            android:text="@string/field_name_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvId"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/tvNameLabel"
            android:textSize="16sp"
            tools:text="name_text" />

        <TextView
            android:id="@+id/tvUserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNameLabel"
            android:layout_marginTop="16dp"
            android:text="@string/field_username_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/tvUserNameLabel"
            android:textSize="16sp"
            tools:text="username_text" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUserNameLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/logout_button_text" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/authorization_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible">
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_button_text" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>